--- a/index.htm
+++ b/index.htm
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
+    <script src="logic.js"></script>
     <title>Bootstrap demo</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -17,7 +18,7 @@
       <div id="navbar-div">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#">Task Manager</a>
             <button
               class="navbar-toggler"
               type="button"
@@ -77,10 +78,19 @@
         </nav>
       </div>
       <div id="task-body-div">
-        <div id="new-tast-perent-div">
-          <div id="new-task-child-div">
-            <input id="new-task-input" type="text" placeholder="Add New Task">
-            <button onclick="addNewTask()" id="task-cancel-btn" type="button">Cancel</button>
+        <div id="new-task-div">
+          <input id="new-task-input" type="text" placeholder="Add New Task" />
+          <div
+            style="
+              display: flex;
+              justify-content: space-evenly;
+              position: relative;
+              width: 100%;
+            "
+          >
+            <button onclick="addNewTask()" id="task-cancel-btn" type="button">
+              Cancel
+            </button>
             <button id="task-add-btn" type="button">Add</button>
           </div>
         </div>
@@ -88,8 +98,9 @@
       <div id="footer-div">
         <div class="footer-child"></div>
         <div class="footer-child">
-          <img onclick="addNewTask()" id="new-add-btn" src="add-square.svg" alt="" />
-          
+          <button id="new-add-btn" onclick="addtask()" type="submit">
+            <p id="new-add-btn-p" style="">+</p>
+          </button>
         </div>
       </div>
     </div>
@@ -99,6 +110,5 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-     <script src="navbar.js"></script>
   </body>
 </html>
